Add self to credits

--- a/client/flutter/assets/credits.yaml
+++ b/client/flutter/assets/credits.yaml
@@ -55,6 +55,7 @@ team:
   - Pieter Otten
   - Kerry Owens
   - Dana Stoica
+  - Michael S Thomsen
 
 # Add yourself here when you first submit a contribution.
 
